--- a/canvas.html
+++ b/canvas.html
@@ -13,9 +13,9 @@
 
         let option = {
             title : {
-                text : '按地区分组的单位情况'
+                text : '按地区分组的单位情况（单位：万个）'
             },
-            tooltip : {},
+            tooltip : {text : 'ddd'},
             legend : {
                 data : ['法人单位' , '产业活动单位']
             },
